@@ -1,16 +1,20 @@
-# Generated by roxygen2 (4.0.1): do not edit by hand
+# Generated by roxygen2 (4.0.2): do not edit by hand
 
 export(cloudMask)
 export(estimateSHV)
 export(radCor)
 export(readMeta)
+export(readSLI)
 export(spectralIndices)
 export(stackMeta)
 export(superClass)
+export(writeSLI)
+import(XML)
 import(geosphere)
 import(landsat)
 import(plyr)
 import(randomForest)
 import(raster)
+import(reshape2)
 import(rgeos)
 import(stringr)
