@@ -1,6 +1,6 @@
 #' RStoolbox: A Collection of Remote Sensing Tools
 #'
 #' @name RStoolbox
-#' @import raster rgeos geosphere plyr randomForest stringr
+#' @import raster rgeos geosphere plyr randomForest stringr XML reshape2
 #' @docType package
 NULL
