@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.0.1): do not edit by hand
+% Generated by roxygen2 (4.0.2): do not edit by hand
 \docType{data}
 \name{LANDSAT.db}
 \alias{LANDSAT.db}
@@ -7,8 +7,8 @@ spatRes resampling: http://landsat.usgs.gov/band_designations_landsat_satellites
 \format{\preformatted{List of 3
  $ LANDSAT5:List of 1
   ..$ TM:'data.frame':	7 obs. of  26 variables:
-  .. ..$ band        : Factor w/ 7 levels "B1","B2","B3",..: 1 2 3 4 5 7 6
-  .. ..$ bandtype    : Factor w/ 2 levels "REF","TIR": 1 1 1 1 1 1 2
+  .. ..$ band        : chr [1:7] "B1" "B2" "B3" "B4" ...
+  .. ..$ bandtype    : chr [1:7] "REF" "REF" "REF" "REF" ...
   .. ..$ centerWavl  : num [1:7] 0.485 0.569 0.66 0.84 1.676 ...
   .. ..$ spatRes1    : num [1:7] 30 30 30 30 30 30 30
   .. ..$ spatRes2    : num [1:7] 30 30 30 30 30 30 60
@@ -35,8 +35,8 @@ spatRes resampling: http://landsat.usgs.gov/band_designations_landsat_satellites
   .. ..$ B4_veryHazy : num [1:7] 1.316 1.215 1.128 1 0.708 ...
  $ LANDSAT7:List of 1
   ..$ ETM:'data.frame':	8 obs. of  26 variables:
-  .. ..$ band        : Factor w/ 8 levels "B1","B2","B3",..: 1 2 3 4 5 7 6 8
-  .. ..$ bandtype    : Factor w/ 3 levels "PAN","REF","TIR": 2 2 2 2 2 2 3 1
+  .. ..$ band        : chr [1:8] "B1" "B2" "B3" "B4" ...
+  .. ..$ bandtype    : chr [1:8] "REF" "REF" "REF" "REF" ...
   .. ..$ spatRes1    : num [1:8] 30 30 30 30 30 30 30 15
   .. ..$ spatRes2    : num [1:8] 30 30 30 30 30 30 60 15
   .. ..$ centerWavl  : num [1:8] 0.485 0.56 0.66 0.835 1.65 ...
@@ -63,8 +63,8 @@ spatRes resampling: http://landsat.usgs.gov/band_designations_landsat_satellites
   .. ..$ B4_veryHazy : num [1:8] 1.312 1.221 1.125 1 0.711 ...
  $ LANDSAT8:List of 1
   ..$ OLI_TIRS:'data.frame':	12 obs. of  26 variables:
-  .. ..$ band        : Factor w/ 12 levels "B1","B10","B11",..: 1 4 5 6 7 8 9 11 2 3 ...
-  .. ..$ bandtype    : Factor w/ 4 levels "PAN","QA","REF",..: 3 3 3 3 3 3 3 3 4 4 ...
+  .. ..$ band        : chr [1:12] "B1" "B2" "B3" "B4" ...
+  .. ..$ bandtype    : chr [1:12] "REF" "REF" "REF" "REF" ...
   .. ..$ spatRes1    : num [1:12] 30 30 30 30 30 30 30 30 30 30 ...
   .. ..$ spatRes2    : num [1:12] 30 30 30 30 30 30 30 30 30 30 ...
   .. ..$ centerWavl  : num [1:12] 0.44 0.48 0.56 0.655 0.865 1.61 2.2 1.37 10.6 11.5 ...
