@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.0.1): do not edit by hand
+% Generated by roxygen2 (4.0.2): do not edit by hand
 \name{cloudMask}
 \alias{cloudMask}
 \title{Very simple cloud detection for imagery with blue and thermal bands}
@@ -18,9 +18,9 @@ cloudMask(x, threshold, minCloudSize, windowSize1 = 5, windowSize2 = 11,
 
 \item{windowSize2}{odd number, rectangular buffer around cluster centers}
 
-\item{sanitize}{logical. Should small clouds (possibly false positives) be removed by filtering? If \code{TRUE} windowSize1 must be specified.}
-
 \item{maskGrowing}{logical. Applies simple region-growing (rectangular buffering) to the cloud mask. If \code{TRUE} windowSize2 must be specified.}
+
+\item{sanitize}{logical. Should small clouds (possibly false positives) be removed by filtering? If \code{TRUE} windowSize1 must be specified.}
 
 \item{lowBand}{bandname or number for the blue band}
 
