@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.0.1): do not edit by hand
+% Generated by roxygen2 (4.0.2): do not edit by hand
 \name{radCor}
 \alias{radCor}
 \title{Radiometric calibration and correction}
@@ -22,10 +22,6 @@ radCor(x, metaData, reflectance = TRUE, thermal = TRUE, satellite,
 
 \item{offset}{Band-specific sensor offset. Require either gain and offset or Grescale and Brescale to convert DN to radiance.}
 
-\item{Grescale}{Band-specific sensor Grescale (gain). Require either gain and offset or Grescale and Brescale to convert DN to radiance.}
-
-\item{Brescale}{Band-specific sensor Brescale (bias). Require either gain and offset or Grescale and Brescale to convert DN to radiance.}
-
 \item{sunElev}{Sun elevation in degrees}
 
 \item{satZenith}{sensor zenith angle (0 for Landsat)}
@@ -40,6 +36,10 @@ radCor(x, metaData, reflectance = TRUE, thermal = TRUE, satellite,
 
 \item{method}{Radiometric correction method to be used. There are currently four methods available (see Details):
 "APREF", "DOS" (Chavez 1989), "COSTZ" (Chavez 1996), SDOS.}
+
+\item{Grescale}{Band-specific sensor Grescale (gain). Require either gain and offset or Grescale and Brescale to convert DN to radiance.}
+
+\item{Brescale}{Band-specific sensor Brescale (bias). Require either gain and offset or Grescale and Brescale to convert DN to radiance.}
 }
 \description{
 Implements several different methods for absolute radiometric correction of Landsat data.
